src/objects/Community_Theme__c.object
<CustomObject>
    <description>Will be used to roll up Tags to a Theme.  Depending on attributes of the Theme, related Tags may be used in the Community Registration process or available to associate to Resources.</description>
    <fields>
        <fullName>Icon_Color__c</fullName>
        <description>Choose from any of Font Awesome&apos;s Icon coloring classes</description>
        <inlineHelpText>Choose from any of Font Awesome&apos;s Icon coloring classes</inlineHelpText>
        <label>Icon Color</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Style__c</fullName>
        <description>Describes the Icon style to be applied to these records in search results</description>
        <inlineHelpText>Describes the Icon style to be applied to these records in search results</inlineHelpText>
        <label>Icon Style</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme_Type__c</fullName>
        <description>determines if the theme will be available for resources, interests or system</description>
        <label>Theme Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theme_Unique_ID__c</fullName>
        <description>This is a unique, external ID field used for the Theme object.  This field can be referenced when importing Tags.</description>
        <externalId>true</externalId>
        <label>Theme Unique ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Community Theme</label>
    <listViews>
        <fullName>All_Themes</fullName>
        <columns>NAME</columns>
        <columns>Theme_Type__c</columns>
        <columns>Icon_Color__c</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Themes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Interest_Themes</fullName>
        <columns>NAME</columns>
        <columns>Icon_Color__c</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>Interest</value>
        </filters>
        <label>Interest Themes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Resource_Themes</fullName>
        <columns>NAME</columns>
        <columns>Icon_Color__c</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filters>
        <label>Resource Themes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_Themes</fullName>
        <columns>NAME</columns>
        <columns>Icon_Color__c</columns>
        <columns>Icon_Style__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme_Type__c</field>
            <operation>equals</operation>
            <value>System</value>
        </filters>
        <label>System Themes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Community Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>